fix: terms.html

--- a/backend/static/document/terms.html
+++ b/backend/static/document/terms.html
@@ -291,11 +291,11 @@
                 <span style="font-family:Aptos; font-size:11pt">&#xa0;</span>
                 <span style="font-family:Aptos; font-size:11pt">Apt. No: 175/141, Şişli/ İstanbul, Turkey</span>
             </p>
-            <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
+            <!-- <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
                 <span style="font-family:Aptos; font-size:11pt">Trade Registry Number:</span>
                 <span style="font-family:Aptos; font-size:11pt">&#xa0;</span>
                 <span style="font-family:Aptos; font-size:11pt">370089-5</span>
-            </p>
+            </p> -->
             <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
                 <span style="font-family:Aptos; font-size:11pt">E-mail:</span>
                 <span style="font-family:Aptos; font-size:11pt">&#xa0;</span>
