fix: terms.html

--- a/backend/static/document/terms.html
+++ b/backend/static/document/terms.html
@@ -285,11 +285,11 @@
                 <span style="font-family:Aptos; font-size:11pt">Company Name:  DecentralGPT Limited </span>
             </p>
             <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
-                <span style="font-family:Aptos; font-size:11pt">Address: Esentepe Mahallesi Büyükdere Cad.</span>
-                <span style="font-family:Aptos; font-size:11pt">&#xa0;</span>
+                <span style="font-family:Aptos; font-size:11pt">Address: Craigmuir Chambers,Road Town,Tortola,VG1110,British Virgin Islands</span>
+                <!-- <span style="font-family:Aptos; font-size:11pt">&#xa0;</span>
                 <span style="font-family:Aptos; font-size:11pt">Ferko</span>
-                <span style="font-family:Aptos; font-size:11pt">&#xa0;</span>
-                <span style="font-family:Aptos; font-size:11pt">Apt. No: 175/141, Şişli/ İstanbul, Turkey</span>
+                <span style="font-family:Aptos; font-size:11pt">&#xa0;</span> -->
+                <!-- <span style="font-family:Aptos; font-size:11pt">Apt. No: 175/141, Şişli/ İstanbul, Turkey</span> -->
             </p>
             <!-- <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
                 <span style="font-family:Aptos; font-size:11pt">Trade Registry Number:</span>
