--- a/backend/static/document/gg_privicy.html
+++ b/backend/static/document/gg_privicy.html
@@ -435,7 +435,7 @@
       <p>During operation, DeGPT may collect performance data and system information to help us identify issues. Some of this information may be sent to us in crash reports if you've opted in to this feature in your device or operating system settings.</p>
       
       <p>
-        DeGPT will store a portion of user and large model historical conversation information, which allows users to quickly retrieve key information. Of course, users can choose to delete this information.
+        DeGPT will store a portion of user and large model historical conversation information, which allows users to quickly retrieve key information. Of course, users can choose to delete this information. The system will automatically delete user data within 90 days.
       </p>
       <!-- <p>DeGPT clients do not directly send any analytics or other telemetry data, however other software used to download, install, and run DeGPT clients, such as your operating system or app store may do so. If available to us, we will use this information to improve the application stability and performance in accordance with the policies of such data sources.</p>
       <p>During troubleshooting procedures, we may ask for log files to assist us in identifying performance or stability issues. If the logs are posted publicly, we cannot guarantee the privacy of the information contained within the log, so please ensure any private information is redacted prior to posting. In the event of accidental leakage and notification from the affected party, we will attempt to remove any private information to the extent that we determine to be feasible.</p> -->
