--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 		<script>
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 			(() => {
-				console.log("localStorage?.theme", localStorage?.theme);
+				// console.log("localStorage?.theme", localStorage?.theme);
 				if (localStorage?.theme && localStorage?.theme.includes('oled')) {
 					document.documentElement.style.setProperty('--color-gray-900', '#000000');
 					document.documentElement.style.setProperty('--color-gray-950', '#000000');
