--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,6 @@
 		<script>
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 			(() => {
-				// console.log("localStorage?.theme", localStorage?.theme);
 				if (localStorage?.theme && localStorage?.theme.includes('oled')) {
 					document.documentElement.style.setProperty('--color-gray-900', '#000000');
 					document.documentElement.style.setProperty('--color-gray-950', '#000000');
@@ -25,7 +24,7 @@
 					localStorage.theme === 'light' ||
 					(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: light)').matches)
 				) {
-					document.documentElement.classList.add('dark');
+					document.documentElement.classList.add('light');
 				} else if (localStorage.theme && localStorage.theme !== 'system') {
 					localStorage.theme.split(' ').forEach((e) => {
 						document.documentElement.classList.add(e);
