--- a/backend/static/document/terms.html
+++ b/backend/static/document/terms.html
@@ -912,6 +912,11 @@
                 <span style="font-family:Aptos; font-size:11pt">If any terms or provision of this Agreement is declared void or unenforceable in a particular situation, by any judicial or administrative authority, this declaration shall not affect the validity of enforceability of the remaining terms and provisions hereof or the validity or enforceability of the offending term or provision in any other situation. To the extent possible the provision will be interpreted and enforced to the greatest extent legally permissible in order to effectuate the original intent and if no such interpretation or enforcement is legally permissible, shall be deemed severed from the terms.</span>
             </p>
             <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
+                <span style="font-family:Aptos; font-size:11pt; font-weight:bold">19.5.</span>
+                <span style="font-family:Aptos; font-size:11pt; font-weight:bold">&#xa0;</span>
+                <span style="font-family:Aptos; font-size:11pt">This product application and value-added services do not support users in mainland China. If users in mainland China suffer investment or asset losses due to their own reasons, they shall be solely responsible for such losses.</span>
+            </p>
+            <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
                 <span style="font-family:Aptos; font-size:11pt; font-weight:bold">Contact Us</span>
             </p>
             <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
