--- a/backend/static/document/gg_privicy.html
+++ b/backend/static/document/gg_privicy.html
@@ -463,6 +463,7 @@
 
       <h3>Opting Out of Firebase Analytics</h3>
       <p>If you wish to opt out of Firebase Analytics tracking, you can do so by disabling tracking in your device settings. For more information on how Firebase collects and processes data, please refer to <a href="https://policies.google.com/privacy">Google's Privacy Policy</a> and <a href="https://firebase.google.com/support/privacy">Firebase's Privacy and Security documentation</a>.</p>
+      <p>This product application and value-added services do not support users in mainland China. If users in mainland China suffer investment or asset losses due to their own reasons, they shall be solely responsible for such losses.</p>
     </article>
   </section>
 
