--- a/backend/static/document/privicy.html
+++ b/backend/static/document/privicy.html
@@ -1175,6 +1175,9 @@
                 <span style="font-family:Aptos; font-size:11pt">DeGPT</span>
                 <span style="font-family:Aptos; font-size:11pt">after the notification period, you shall be deemed to have allowed the changes in this Privacy Policy.</span>
             </p>
+            <p style="font-size:11pt; line-height:116%; margin:0pt 0pt 8pt; orphans:0; widows:0">
+                <span style="font-family:Aptos; font-size:11pt">This product application and value-added services do not support users in mainland China. If users in mainland China suffer investment or asset losses due to their own reasons, they shall be solely responsible for such losses.</span>
+            </p>
            
             <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
                 <tr>
