--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" crossorigin="use-credentials" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="robots" content="noindex,nofollow" />
+		<meta http-equiv="Permissions-Policy" content="accelerometer=()">
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
