--- a/src/app.html
+++ b/src/app.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="robots" content="index, follow" />
     <link rel="search" type="application/opensearchdescription+xml" title="DeGPT" href="/opensearch.xml" />
-    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+    <!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
     <script>
       var vConsole = new window.VConsole();
       console.log('Hello world');
       // 结束调试后，可以移除 vConsole
       vConsole.destroy();
-    </script>
+    </script> -->
     <script>
       // On page load or when changing themes, best to add inline in `head` to avoid FOUC
       (() => {
